--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.0.0-beta3",
+    "cloudinary": "^1.28.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "core-js": "^3.10.1",
@@ -27,6 +28,7 @@
     "regenerator-runtime": "^0.13.7",
     "sharp": "^0.28.1",
     "slugify": "^1.5.0",
+    "streamifier": "^0.1.1",
     "validator": "^13.5.2",
     "xss-clean": "^0.1.1"
   },
